// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-collapse snapshot tests should render in expanded state 1`] = `
<modus-wc-collapse collapse-title="Expanded" expanded="true">
  <!---->
  <div aria-expanded="" class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open" role="button" tabindex="0">
    <input type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        Expanded
      </div>
    </div>
    <div class="modus-wc-collapse-content modus-wc-cursor-default">
      <div>
        Expanded Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with content 1`] = `
<modus-wc-collapse collapse-title="With Content">
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close" role="button" tabindex="0">
    <input type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        With Content
      </div>
    </div>
    <div class="modus-wc-collapse-content modus-wc-cursor-default">
      <div>
        Test Content
      </div>
    </div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with custom props 1`] = `
<modus-wc-collapse bordered="false" collapse-description="Test description" collapse-title="Test title" custom-class="test-class" expanded="true" icon="alert" icon-aria-label="Alert icon">
  <!---->
  <div aria-expanded="" class="modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-open test-class" role="button" tabindex="0">
    <input type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl">
        <modus-wc-icon aria-label="Alert icon">
          <i aria-hidden="true" class="modus-icons modus-wc-icon--md" tabindex="-1">
            alert
          </i>
        </modus-wc-icon>
        Test title
      </div>
      <div class="modus-wc-font-light">
        Test description
      </div>
    </div>
    <div class="modus-wc-collapse-content modus-wc-cursor-default"></div>
  </div>
</modus-wc-collapse>
`;

exports[`modus-wc-collapse snapshot tests should render with default props 1`] = `
<modus-wc-collapse>
  <!---->
  <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close" role="button" tabindex="0">
    <input type="checkbox">
    <div class="modus-wc-collapse-title modus-wc-inline-flex modus-wc-items-center modus-wc-justify-between">
      <div class="modus-wc-font-medium modus-wc-inline-flex modus-wc-items-center modus-wc-text-xl"></div>
    </div>
    <div class="modus-wc-collapse-content modus-wc-cursor-default"></div>
  </div>
</modus-wc-collapse>
`;
